# i18nText

./: CMakeLists.txt  LICENSE  README.md  TODO  main.cpp
include/: i18nText.h
src/: i18nText.cpp
